--- a/pages/productos-todos.html
+++ b/pages/productos-todos.html
@@ -115,7 +115,9 @@
   
     <div class="container">
         <div class="contenedorTitulos"></div>
-        <div id="productos"></div>        
+        <div id="productos"></div>
+        <div class="contenedorTitulosBuzos"></div>
+        <div id="productosBuzos"></div> 
     </div>
 
     <!-- Todos los Productos -->
@@ -131,7 +133,7 @@
 </main>
 
 <!-- contenedor footer -->
-<!-- <footer>
+<footer>
   <div class="logoYRedes">
       <div class="logoFooter">
           <a href="#top">
@@ -158,7 +160,7 @@
           Todos los derechos reservados • Brian Corbalan 2023
       </p>            
   </div>
-</footer> -->
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">            
     </script> 
     <script type="module" src="../db/productos.js"></script>
