--- a/index.html
+++ b/index.html
@@ -197,53 +197,10 @@
             </div>
     
             <!-- Destacados de la semana  -->
-            <h2 class="tituloSecciones">
-                Destacados de la Semana
-            </h2>
-    
-            <div class="destacadosSemana">
-                <div class="ofertas productoUno animacionCaja">
-                    <a href="pages/remera-digimon-w.html">
-                        <img src="img/productos/remeras/remera-destacada-digimon-w.png" alt="Remera destacada de la semana de Digimon (version remera blanca)">
-                    </a>
-                    <p>
-                        Digimon (Blanca)
-                    </p>
-                </div>
-                <div class="ofertas productosDos animacionCaja">
-                    <a href="pages/remera-digimon.html">
-                        <img src="img/productos/remeras/remera-destacada-digimon.png" alt="Remera destacada de la semana de Digimon">
-                    </a>
-                    <p>
-                        Digimon
-                    </p>
-                </div>
-                <div class="ofertas productoTres animacionCaja">
-                    <a href="pages/remera-zero.html">
-                        <img src="img/productos/remeras/remera-destacada-zero.png" alt="Remera destacada de la semana de Zero">
-                    </a>
-                    <p>
-                        Zero
-                    </p>
-                </div>
-                <div class="ofertas productoCuatro animacionCaja">
-                    <a href="pages/remera-guardianes.html">
-                        <img src="img/productos/remeras/remera-destacada-guardianes.png" alt="Remera destacada de la semana de Guardianes de la galaxia">
-                    </a>
-                    <p>
-                        Guardianes
-                    </p>
-                </div>
-                <div class="ofertas productoCinco animacionCaja">
-                    <a href="pages/remera-wanda.html">
-                        <img src="img/productos/remeras/remera-destacada-wanda.png" alt="Remera destacada de la semana de Wanda Vision">
-                    </a>
-                    <p>
-                        Wanda Vision
-                    </p>
-                </div>
+            <div class="container">
+                <h2 class="tituloSecciones"> Destacados de la semana</h2>
+                <div id="productos"></div>
             </div>
-        </div> 
 
         <a href="https://web.whatsapp.com/" target="_blank">
             <img class="whatsappPhone animate__animated animate__heartBeat animate__delay-1s" src="img/iconos/iconos_wpp-ph.png" alt="icono de whatsapp">
@@ -283,8 +240,15 @@
             </p>            
         </div>
     </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">            
-        </script>    
-        <script src="./main.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">            
+    </script> 
+    <script type="module" src="db/productos.js"></script>
+    <script type="module" src="js/inicio.js"></script>
+    <script type="module" src="js/carrito.js"></script>
+
+  <script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+  crossorigin="anonymous"></script>
 </body>
 </html>
