--- a/pages/productos-todos.html
+++ b/pages/productos-todos.html
@@ -114,9 +114,9 @@
     </div>  
   
     <div class="container">
-        <div class="contenedorTitulos"></div>
+        <h2 class="tituloSecciones"> Remeras</h2>
         <div id="productos"></div>
-        <div class="contenedorTitulosBuzos"></div>
+        <h2 class="tituloSecciones"> Buzos</h2>
         <div id="productosBuzos"></div> 
     </div>
 
@@ -132,35 +132,35 @@
 
 </main>
 
-<!-- contenedor footer -->
-<footer>
-  <div class="logoYRedes">
-      <div class="logoFooter">
-          <a href="#top">
-              <img src="../img/iconos/logo.png" alt="logo Reiwa" >
-          </a>            
-      </div> 
-      <div class="resumen">
-          <p>Nos especializamos en la creación y producción de remeras únicas y originales que reflejan tu estilo y personalidad.</p>
-      </div>            
-      <div class="redes">
-          <a href="https://www.facebook.com" target="_blank">
-              <img src="../img/iconos/iconos_face.png" alt="facebook">
-          </a>
-          <a href="https://www.twitter.com" target="_blank">
-              <img src="../img/iconos/iconos_tw.png" alt="twitter">
-          </a>
-          <a href="https://www.instagram.com/reiwa.style/" target="_blank">
-              <img src="../img/iconos/iconos_ig.png" alt="instagram">
-          </a>
-      </div>
-  </div>
-  <div class="legales">
-      <p>
-          Todos los derechos reservados • Brian Corbalan 2023
-      </p>            
-  </div>
-</footer>
+    <!-- contenedor footer -->
+    <footer>
+    <div class="logoYRedes">
+        <div class="logoFooter">
+            <a href="#top">
+                <img src="../img/iconos/logo.png" alt="logo Reiwa" >
+            </a>            
+        </div> 
+        <div class="resumen">
+            <p>Nos especializamos en la creación y producción de remeras únicas y originales que reflejan tu estilo y personalidad.</p>
+        </div>            
+        <div class="redes">
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="../img/iconos/iconos_face.png" alt="facebook">
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="../img/iconos/iconos_tw.png" alt="twitter">
+            </a>
+            <a href="https://www.instagram.com/reiwa.style/" target="_blank">
+                <img src="../img/iconos/iconos_ig.png" alt="instagram">
+            </a>
+        </div>
+    </div>
+    <div class="legales">
+        <p>
+            Todos los derechos reservados • Brian Corbalan 2023
+        </p>            
+    </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">            
     </script> 
     <script type="module" src="../db/productos.js"></script>
