--- a/pages/remera-digimon.html
+++ b/pages/remera-digimon.html
@@ -125,66 +125,9 @@
 
 
             <!-- seccion Descuentos Interesantes -->
-            <h2 class="tituloSecciones">
-                Descuentos que te pueden interesar
-            </h2>
-    
-            <div class="destacadosSemana">
-                <div class="ofertas productoUno animacionCaja">
-                    <a href="../pages/remera-digimon-w.html">
-                        <img src="../img/productos/remeras/remera-destacada-digimon-w.png" alt="Remera de interes de Digimon version blanca">
-                    </a>
-                    <p>
-                        Digimon (Blanca) 
-                    </p>
-                    <p>
-                        $960 <span class="precioViejo"> $1200 </span>
-                    </p>
-                </div>
-                <div class="ofertas productosDos animacionCaja">
-                    <a href="../pages/remera-digimon.html">
-                        <img src="../img/productos/remeras/remera-destacada-digimon.png" alt="Remera de interes de digimon">
-                    </a>
-                    <p>
-                        Digimon
-                    </p>
-                    <p>
-                        $960 <span class="precioViejo"> $1200 </span>
-                    </p>
-                </div>
-                <div class="ofertas productoTres animacionCaja">
-                    <a href="../pages/remera-zero.html">
-                        <img src="../img/productos/remeras/remera-destacada-zero.png" alt="Remera de interes de Zero">
-                    </a>
-                    <p>
-                        Zero
-                    </p>
-                    <p>
-                        $960 <span class="precioViejo"> $1200 </span>
-                    </p>
-                </div>
-                <div class="ofertas productoCuatro animacionCaja">
-                    <a href="../pages/remera-guardianes.html">
-                        <img src="../img/productos/remeras/remera-destacada-guardianes.png" alt="Remera de interes de guardianes de la Galaxia">
-                    </a>
-                    <p>
-                        Guardianes
-                    </p>
-                    <p>
-                        $960 <span class="precioViejo"> $1200 </span>
-                    </p>
-                </div>
-                <div class="ofertas productoCinco animacionCaja">
-                    <a href="../pages/remera-wanda.html">
-                        <img src="../img/productos/remeras/remera-destacada-wanda.png" alt="Remera de interes de wanda vision">
-                    </a>
-                    <p>
-                        WandaVision 
-                    </p>
-                    <p>
-                        $960 <span class="precioViejo"> $1200 </span>
-                    </p>
-                </div>
+            <div class="container">
+                <h2 class="tituloSecciones"> Descuentos y más descuentos</h2>
+                <div id="productos"></div>
             </div>
             <a href="https://web.whatsapp.com/" target="_blank">
                 <img class="whatsappPhone animate__animated animate__heartBeat animate__delay-2s" src="../img/iconos/iconos_wpp-ph.png" alt="Icono de whatsapp">
@@ -225,6 +168,14 @@
         </div>
     </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">            
-        </script> 
+    </script> 
+    <script type="module" src="../db/productos.js"></script>
+    <script type="module" src="../js/inicio.js"></script>
+    <script type="module" src="../js/carrito.js"></script>
+
+  <script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+  crossorigin="anonymous"></script>
 </body>
 </html>
